reservation approval with error needs to be change